--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-:root{
+:root {
     --page-1-color: steelblue;
     --page-2-color: tan;
     --page-3-color: teal;
     --page-4-color: slateblue;
-    --animate-speed:1s;
+    --animate-speed: 1s;
 }
 
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.4;
     color: #fff;
@@ -16,12 +16,23 @@ body{
 }
 
 
-#page-1{ background: var(--page-1-color);}
-#page-2{ background: var(--page-2-color);}
-#page-3{ background: var(--page-3-color);}
-#page-4{ background: var(--page-4-color);}
+#page-1 {
+    background: var(--page-1-color);
+}
 
-.page{
+#page-2 {
+    background: var(--page-2-color);
+}
+
+#page-3 {
+    background: var(--page-3-color);
+}
+
+#page-4 {
+    background: var(--page-4-color);
+}
+
+.page {
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -31,17 +42,17 @@ body{
     padding: 0 4rem;
 }
 
-.page h1{
+.page h1 {
     font-size: 4rem;
     line-height: 1.2;
     margin: 1rem;
 }
 
-.page p{
+.page p {
     font-size: 1.3rem;
 }
 
-.btn{
+.btn {
     display: inline-block;
     padding: 1rem 2rem;
     background: #f4f4f4;
@@ -53,38 +64,37 @@ body{
     transition: all 0.3s ease-in;
 }
 
-.btn:hover, .btn-dark{
+.btn:hover,
+.btn-dark {
     background: #333;
     color: #fff;
 }
 
-.btn-dark:hover{
+.btn-dark:hover {
     background: #f4f4f4;
     color: #333;
 }
 
-#page-1 h1{
+#page-1 h1 {
     transform: translateY(-1200px);
     animation: heading var(--animate-speed) forwards ease-in;
 }
 
-#page-1 p{
+#page-1 p {
     transform: translateX(-1800px);
     animation: text var(--animate-speed) forwards ease-in 1s;
 }
 
-@keyframes heading{
-    to{
+@keyframes heading {
+    to {
         transform: translateY(0);
     }
-    
+
 }
 
-@keyframes text{
-    to{
+@keyframes text {
+    to {
         transform: translateX(0);
     }
-    
+
 }
-
-
